force-app/main/default/objects/API_Employee_Service__c/API_Employee_Service__c.object-meta.xml
<CustomObject>
    <label>API Employee Service</label>
    <nameField>
        <label>API Employee Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Employee Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>