force-app/main/default/objects/API_Employee_Service__c/fields/corporate_email__c.field-meta.xml
<CustomField>
    <fullName>corporate_email__c</fullName>
    <label>corporate_email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>