force-app/main/default/objects/API_Employee_Service__c/fields/department_catalog_name__c.field-meta.xml
<CustomField>
    <fullName>department_catalog_name__c</fullName>
    <label>department_catalog_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>