force-app/main/default/objects/API_Employee_Service__c/fields/department_code__c.field-meta.xml
<CustomField>
    <fullName>department_code__c</fullName>
    <label>department_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>