force-app/main/default/objects/API_Employee_Service__c/fields/directorate_code__c.field-meta.xml
<CustomField>
    <fullName>directorate_code__c</fullName>
    <label>directorate_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>