force-app/main/default/objects/API_Employee_Service__c/fields/division_catalog_code__c.field-meta.xml
<CustomField>
    <fullName>division_catalog_code__c</fullName>
    <label>division_catalog_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>