force-app/main/default/objects/API_Employee_Service__c/fields/dt_last_career_eff__c.field-meta.xml
<CustomField>
    <fullName>dt_last_career_eff__c</fullName>
    <label>dt_last_career_eff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>