force-app/main/default/objects/API_Employee_Service__c/fields/dt_resign__c.field-meta.xml
<CustomField>
    <fullName>dt_resign__c</fullName>
    <label>dt_resign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>