force-app/main/default/objects/API_Employee_Service__c/fields/emp_name__c.field-meta.xml
<CustomField>
    <fullName>emp_name__c</fullName>
    <label>emp_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>