force-app/main/default/objects/API_Employee_Service__c/fields/flag_cuti__c.field-meta.xml
<CustomField>
    <fullName>flag_cuti__c</fullName>
    <label>flag_cuti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>