force-app/main/default/objects/API_Employee_Service__c/fields/homebase_code__c.field-meta.xml
<CustomField>
    <fullName>homebase_code__c</fullName>
    <label>homebase_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>