force-app/main/default/objects/API_Employee_Service__c/fields/job_title_name__c.field-meta.xml
<CustomField>
    <fullName>job_title_name__c</fullName>
    <label>job_title_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>