force-app/main/default/objects/API_Employee_Service__c/fields/mobile_phone_no__c.field-meta.xml
<CustomField>
    <fullName>mobile_phone_no__c</fullName>
    <label>mobile_phone_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>