force-app/main/default/objects/API_Employee_Service__c/fields/personal_email__c.field-meta.xml
<CustomField>
    <fullName>personal_email__c</fullName>
    <label>personal_email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>