force-app/main/default/objects/API_Employee_Service__c/fields/position_name__c.field-meta.xml
<CustomField>
    <fullName>position_name__c</fullName>
    <label>position_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>