force-app/main/default/objects/API_Employee_Service__c/fields/satuan_kerja_name__c.field-meta.xml
<CustomField>
    <fullName>satuan_kerja_name__c</fullName>
    <label>satuan_kerja_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>