force-app/main/default/objects/API_Employee_Service__c/fields/section_name__c.field-meta.xml
<CustomField>
    <fullName>section_name__c</fullName>
    <label>section_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>