force-app/main/default/objects/API_Employee_Service__c/fields/superior_emp_no__c.field-meta.xml
<CustomField>
    <fullName>superior_emp_no__c</fullName>
    <label>superior_emp_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>