force-app/main/default/objects/API_Employee_Service__c/fields/unit_catalog_name__c.field-meta.xml
<CustomField>
    <fullName>unit_catalog_name__c</fullName>
    <label>unit_catalog_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>