force-app/main/default/objects/API_Employee_Service__c/fields/worklocation_code__c.field-meta.xml
<CustomField>
    <fullName>worklocation_code__c</fullName>
    <label>worklocation_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>